[package]
name = "boss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
image = "0.25.4"
rand = "0.8.5"
rocksdb = "0.22.0"
rpassword = "7.3.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.13.0"
thiserror = "1.0.65"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = { version = "1.8.1", features = ["derive"] }
